cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_337.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:412: error: DEAD_STORE
  The value written to &j (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:412:9: Write of unused value
410.            * set bit before the end of the window
411.            */
412.           j = wstart;
               ^
413.           wvalue = 1;
414.           wend = 0;
